--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blockchainsim",
   "version": "0.1.0",
   "private": true,
+  "PUBLIC_URL": "https://frashier.github.io/BlockchainSim",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
