--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "blockchainsim",
   "version": "0.1.0",
   "private": true,
-  "PUBLIC_URL": "https://frashier.github.io/BlockchainSim",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -23,6 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://frashier.github.io/BlockchainSim",
   "eslintConfig": {
     "extends": [
       "react-app",
